tests/sksl/errors/InterfaceBlockWithInvalidStruct.glsl
### Compilation failed:

error: 2: unsized arrays are not permitted here
    int[] unsizedArray;
    ^^^^^^^^^^^^^^^^^^
1 error
